# shan-shui-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  original.html  todo.txt
core/: Cargo.toml
core/src/: draw.rs  lib.rs  main.rs  noise.rs  point.rs  random.rs
core/src/forms/: arch.rs  boat.rs  building.rs  man.rs  mod.rs  mountain.rs  rock.rs  tree.rs  water.rs
native/: Cargo.toml
native/src/: main.rs
paper/: Cargo.toml  build.rs  run.sh  shanshui.py  wrapper.h
paper/c/lib/: wrapper.h
paper/python/: screen.py  shanshui.py
paper/src/: bindings.rs  lib.rs  main.rs
paper/src/bindings/: dev_config.rs
server/: Cargo.toml  README.md  index.html
server/src/: main.rs
server/test/: boat.ts
web/: Cargo.toml  README.md  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  wasm.sh  webpack.config.js
web/src/: lib.rs
