[package]
name = "shan-shui-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
nickel = "0.11.0"
nickel_cors = "0.3.3"
shan-shui = { path = "../core" }